Rolling back to Java 8.