@@ -14,8 +14,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <controlsfx.version>11.0.1</controlsfx.version>
-        <ikonli.version>11.3.5</ikonli.version>
+        <controlsfx.version>8.40.16</controlsfx.version>
+        <ikonli.version>2.6.0</ikonli.version>
         <maven.javadoc.skip>false</maven.javadoc.skip>
         <jpro.version>2019.2.3</jpro.version>
         <apache.felix.version>4.2.1</apache.felix.version>
@@ -44,24 +44,11 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
-                <configuration>
-                    <forkCount>0</forkCount>
-                    <argLine>
-                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
-                    <release>11</release>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
 
